--- a/7.05/css/style.css
+++ b/7.05/css/style.css
@@ -211,7 +211,7 @@ header {
   padding: 0 0.26667rem;
   justify-content: space-between;
   align-items: center;
-  background: #fff;
+  background: pink;
 }
 
 .top {
