--- a/7.05/css/style.scss
+++ b/7.05/css/style.scss
@@ -17,7 +17,7 @@ header {
     padding: 0 pxTorem(10px);
     justify-content: space-between;
     align-items: center;
-    background: #fff;
+    background: pink;
 }
 
 .top {
